RESOLVED FIXED 242587
[Web share] Disallow sharing data: URLs
https://bugs.webkit.org/show_bug.cgi?id=242587
Summary [Web share] Disallow sharing data: URLs
Marcos Caceres
Reported 2022-07-10 22:22:03 PDT
The Web Share spec disallows sharing data: URLs, but WebKit allows it. We should disallow sharing data: URL. Steps to reproduce: 1. Go to https://wpt.live/web-share/canShare.https.html Expected: The test that checks if data: URL is allowed should pass (meaning it's not allowed!). Actual: The test fails.
Attachments
Marcos Caceres
Comment 1 2022-07-10 23:00:35 PDT
EWS
Comment 2 2022-07-12 16:13:12 PDT
Committed 252398@main (2465fcd9300b): <https://commits.webkit.org/252398@main> Reviewed commits have been landed. Closing PR #2286 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-07-12 16:14:15 PDT
Note You need to log in before you can comment on or make changes to this bug.