[Web share] Disallow sharing data: URLs https://bugs.webkit.org/show_bug.cgi?id=242587

Reviewed by Tim Horton.

* LayoutTests/imported/w3c/web-platform-tests/web-share/canShare.tentative.https-expected.txt: Removed.
* LayoutTests/imported/w3c/web-platform-tests/web-share/canShare.tentative.https.html: Removed.
* LayoutTests/platform/ios-wk2/imported/w3c/web-platform-tests/web-share/canShare.https-expected.txt:
* LayoutTests/platform/mac-wk2/imported/w3c/web-platform-tests/web-share/canShare.https-expected.txt:
* LayoutTests/platform/mac-wk2/imported/w3c/web-platform-tests/web-share/share-url-invalid.https-expected.txt:
* Source/WebCore/page/Navigator.cpp:
(WebCore::shareableURLForShareData):

Canonical link: https://commits.webkit.org/252398@main